--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>User Authentication</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/semantic.min.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/semantic.min.js"></script>
-    <style></style>
+    <style>
+        body {
+            padding-top: 80px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="ui segment">
-            <h1 class="ui header">User Authentication</h1>
-            <p>Login or Register with:</p>
-            <a href="/login" class="ui primary button"><i class='add user icon'></i>Login</a>
-            <a href="/signup" class="ui button"><i class='user icon'></i>Signup</a>
-        </div>
+
+    <div class="ui segment">
+        <h1 class="ui header">User Authentication</h1>
+        <p>Login or Register with:</p>
+        <a href="/login" class="ui primary button"><i class='add user icon'></i>Login</a>
+        <a href="/signup" class="ui button"><i class='user icon'></i>Signup</a>
     </div>
+
 </body>
 </html>
