--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,9 +7,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/semantic.min.js"></script>
     <style>
-        body {
-            padding-top: 80px;
-        }
+
     </style>
 </head>
 <body>
@@ -19,14 +17,14 @@
         <div class="required field">
             <label>Email/User name</label>
             <div class="ui icon input">
-                <input type='text' placeholder="Email/User name">
+                <input type='text' placeholder="Email/User name" name="email">
                 <i class="user icon"></i>
             </div>
         </div>
        <div class="required field">
             <label>Password</label>
             <div class="ui icon input">
-                <input type='password'>
+                <input type='password' name="password">
                 <i class="lock icon"></i>
             </div>
         </div>
