added github auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,8 @@
         <div class="ui four column row">
             <a href="/login" class="ui primary button"><i class='add user icon'></i>Login</a> <br />
             <a href="/signup" class="ui button"><i class='user icon'></i>Signup</a> <br />
-            <div class="ui github black button"><i class='github icon'></i>Login with GitHub</div> <br />
+            <a href="/auth/facebook" class="ui facebook button"><i class="facebook icon"></i> Facebook</a> <br />
+            <a href='/auth/github' class="ui github black button"><i class='github icon'></i>Login with GitHub</a> <br />
             <div class="ui linkedin button"><i class="linkedin icon"></i>Login with LinkedIn</div> <br />
         </div>
 
