--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,56 @@
 <!doctype html>
 <html>
+    <title>User Registration</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/semantic.min.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/semantic.min.js"></script>
 <head>
+    <div class="ui segment">
+        <h1 class="ui header">Profile Page</h1>
+        <a href="/logout" class="ui button">Logout</a>
+    </div>
+    <div class="ui segment">
+        <div class="ui grid">
+            <div class="eight wide column">
+                <h3 class='ui header'>Local</h3>
+                <p>
+                    <strong>id</strong>: <%= user._id %><br />
+                    <strong>email</strong>: <%= user.local.email %><br />
+                    <strong>password</strong>: <%= user.local.password %>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui segment">
+        <div class="ui grid">
+            <div class="eight wide column">
+                <h3 class='ui header'><i class="large facebook icon"></i>Facebook</h3>
+                <p>
+                    <strong>id</strong>: <%= user.facebook.id %><br />
+                    <strong>token</strong>: <%= user.facebook.token %><br />
+                    <strong>email</strong>: <%= user.facebook.email %><br />
+                    <strong>name</strong>: <%= user.facebook.name %>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui segment">
+        <div class="ui grid">
+            <div class="eight wide column">
+                <h3 class='ui header'><i class="large github icon"></i>GitHub</h3>
+                <p>
+                    <strong>id</strong>: <%= user.github.id %><br />
+                    <strong>login</strong>: <%= user.github.login %><br />
+                    <strong>token</strong>: <%= user.github.token %><br />
+                    <strong>email</strong>: <%= user.github.email %><br />
+                    <strong>name</strong>: <%= user.github.name %>
+                </p>
+            </div>
+        </div>
+    </div>
+
 </head>
 <body>
 </body>
