--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,18 +19,21 @@
 <body>
 
     <div class="ui segment">
-    <div class='ui centered grid'>
-        <div class="ui four column row">
-            <h2 class='ui header'> Login or Register with:</h2>
+        <div class="ui grid">
+            <div class="four wide column"></div>
+            <div class="six wide column">
+                <h2 class='ui header'> Login or Register with:</h2>
+            </div>
+
+            <div class="ui four column row">
+                <a href="/login" class="ui primary button"><i class='add user icon'></i>Login</a> <br />
+                <a href="/signup" class="ui button"><i class='user icon'></i>Signup</a> <br />
+                <a href="/auth/facebook" class="ui facebook button"><i class="facebook icon"></i> Facebook</a> <br />
+                <a href='/auth/github' class="ui github black button"><i class='github icon'></i>Login with GitHub</a> <br />
+                <div class="ui linkedin button"><i class="linkedin icon"></i>Login with LinkedIn</div> <br />
+            </div>
         </div>
 
-        <div class="ui four column row">
-            <a href="/login" class="ui primary button"><i class='add user icon'></i>Login</a> <br />
-            <a href="/signup" class="ui button"><i class='user icon'></i>Signup</a> <br />
-            <a href="/auth/facebook" class="ui facebook button"><i class="facebook icon"></i> Facebook</a> <br />
-            <a href='/auth/github' class="ui github black button"><i class='github icon'></i>Login with GitHub</a> <br />
-            <div class="ui linkedin button"><i class="linkedin icon"></i>Login with LinkedIn</div> <br />
-        </div>
 
     </div>
     </div>
