--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,28 +12,33 @@
 </head>
 <body>
 <div class="ui segment">
-    <h1 class="ui header">Login</h1>
-    <form class="ui form" action="/login" method="post">
-        <div class="required field">
-            <label>Email/User name</label>
-            <div class="ui icon input">
-                <input type='text' placeholder="Email/User name">
-                <i class="user icon"></i>
-            </div>
-        </div>
-       <div class="required field">
-            <label>Password</label>
-            <div class="ui icon input">
-                <input type='password'>
-                <i class="lock icon"></i>
-            </div>
-        </div>
-        <input type='submit' class="ui blue submit button" value="Login" />
+    <div class="ui grid">
+        <div class="four wide column"></div>
+        <div class="six wide column">
+            <h1 class="ui header">Login</h1>
+            <form class="ui form" action="/login" method="post">
+                <div class="required field">
+                    <label>Email/User name</label>
+                    <div class="ui icon input">
+                        <input type='text' placeholder="Email/User name">
+                        <i class="user icon"></i>
+                    </div>
+                </div>
+               <div class="required field">
+                    <label>Password</label>
+                    <div class="ui icon input">
+                        <input type='password'>
+                        <i class="lock icon"></i>
+                    </div>
+                </div>
+                <input type='submit' class="ui blue submit button" value="Login" />
 
-    </form>
-    <div class='ui divider'></div>
-    <p>Need an account? <a href="/signup">Signup</a></p>
-    <p>Or go <a href="/">Home</a>.</p>
+            </form>
+            <div class='ui divider'></div>
+            <p>Need an account? <a href="/signup">Signup</a></p>
+            <p>Or go <a href="/">Home</a>.</p>
+        </div>
+    </div>
 
 </div>
 </body>
