--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,26 +12,31 @@
 </head>
 <body>
 <div class="ui segment">
-    <h1 class="ui header">Signup</h1>
-    <form class="ui form" action="/signup" method="post">
-        <div class="required field">
-            <label>Email/User name</label>
-            <div class="ui icon input">
-                <input type='text' placeholder="Email/User name" name="email">
-                <i class="user icon"></i>
-            </div>
+    <div class="ui grid">
+        <div class="four wide column"></div>
+        <div class="six wide column">
+            <h1 class="ui header">Signup</h1>
+            <form class="ui form" action="/signup" method="post">
+                <div class="required field">
+                    <label>Email/User name</label>
+                    <div class="ui icon input">
+                        <input type='text' placeholder="Email/User name" name="email">
+                        <i class="user icon"></i>
+                    </div>
+                </div>
+               <div class="required field">
+                    <label>Password</label>
+                    <div class="ui icon input">
+                        <input type='password' name="password">
+                        <i class="lock icon"></i>
+                    </div>
+                </div>
+                <input type='submit' class="ui blue submit button" value="Signup"/>
+            </form>
+            <div class='ui divider'></div>
+            <p>Or go <a href="/">Home</a>.</p>
         </div>
-       <div class="required field">
-            <label>Password</label>
-            <div class="ui icon input">
-                <input type='password' name="password">
-                <i class="lock icon"></i>
-            </div>
-        </div>
-        <input type='submit' class="ui blue submit button" value="Signup"/>
-    </form>
-    <div class='ui divider'></div>
-    <p>Or go <a href="/">Home</a>.</p>
+    </div>
 
 </div>
 </body>
